@@ -13,4 +13,16 @@ class TestResolvAddr < Test::Unit::TestCase
       end
     }
   end
+
+  def test_invalid_byte_comment
+    bug9273 = '[ruby-core:59239] [Bug #9273]'
+    Tempfile.open('resolv_test_addr_') do |tmpfile|
+      tmpfile.print("\xff\x00\x40")
+      tmpfile.close
+      hosts = Resolv::Hosts.new(tmpfile.path)
+      assert_nothing_raised(ArgumentError, bug9273) do
+        hosts.each_address("") {break}
+      end
+    end
+  end
 end
